@@ -1,3 +1,9 @@
+ratt (28/Jan/02)
+--------------------
+
+Added Yendors corpse movement patch
+Added Yendors newCorpsespawn struct patch
+
 fee (26/01/02)
 --------------------
 
